package entity;

import logic.Sprites;

public class Key extends Box{

	@Override
	public int getSymbol() {
		return Sprites.KEY;
	}

}
