package entity.base;

public interface Consumable {
	public abstract boolean consume(Entity e);
}
