package entity.base;

public interface Interactable {
	public abstract boolean interact(Entity e);
}
